feat(cli): kof workflow run --target js — in-process KofJsRunner with JVM byte parity (closes 2.6 residual, R7)